--- a/css/styles.css
+++ b/css/styles.css
@@ -210,4 +210,196 @@
 }
 /* START dynamic container*/
 
+/*------------
+--------------
+--------------
+------------*/
 
+/* START STYLE Aside*/
+.text-title-content{
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  hr{
+    border-width: 1px;
+  }
+  .number-size{
+    color: #D8D8D8;
+    font-size: 1.9rem;
+  }
+  .text-title{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+  }
+  .text-body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.9rem;
+  }
+  .text-body-date{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: slategrey;
+    font-size: 0.75rem;
+  }
+  .text-body-top{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: slategrey;
+    font-size: 0.75rem;
+  }
+  /*END STYLE Aside*/
+
+  /* START Cards statics*/
+.title-jquery-card{
+    margin: 0;
+    margin-bottom: 5px;
+    color: rgba(0,0,0,.84);
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    /* Meter el texto en un contenido*/
+  }
+  .autor-jquery-card{
+    font-size: 12px;
+      font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+      color:rgb(77, 77, 77);
+      border-top: 4px;
+      border-bottom: 1px;
+      margin-top: 1px;
+  }
+  /* END Cards statics*/
+
+
+/* START CARD fit */
+.feed-jquery{
+    max-width:528px;
+    max-height:171px;
+    }
+    .section-jquery{
+    display: flex;
+    justify-content: center;
+    /* max-width:528px;
+    max-height:171px; */
+    
+    }
+    .article-jquery{
+    padding: 5px;
+    }
+    .tag-topic{
+    --x-height-multiplier: 0;
+    --baseline-multiplier: 0;
+    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    letter-spacing: 0;
+    font-weight: 400;
+    font-style: normal;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    color: rgba(177, 172, 172, 0.774);
+    visibility: visible;
+    line-height: 20px;
+    font-size: 14px;
+    text-align: left;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    text-transform: capitalize;
+    }
+    .title-jquery{
+    margin: 0;
+    margin-bottom: 5px;
+    color: rgba(0,0,0,.84);
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+    transform: translateY(.96px);
+    letter-spacing: -.17px;
+    font-weight: 600;
+    max-height: 40px;
+    text-overflow: ellipsis;
+    /* Meter el texto en un contenido*/
+    }
+    .summary-jquery{
+    text-align: left;
+    margin-top: 2px;
+    margin-bottom: 15px;
+    color: rgba(0,0,0,.54);
+    overflow: hidden!important;
+      max-height: 40px!important;
+      text-overflow: ellipsis!important;
+      display: -webkit-box!important;
+      -webkit-line-clamp: 2!important;
+      -webkit-box-orient: vertical;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    transform: translateY(1.52px);
+    font-weight: 400;
+    overflow: hidden;
+    max-height: 40px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    }
+    .autor-jquery{
+    font-size: 14px;
+      font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+      color:black;
+      border-top: 4px;
+      border-bottom: 1px;
+      margin-top: 1px;
+    }
+    .createdate-jquery{
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
+    font-style: italic;
+    font-size: 11px;
+    align-content: center;
+    }
+    .img-jquery{
+    height: 150px;
+    line-height: 150px;
+    padding: 10px;
+    margin: 5px;
+    }
+    .img-url{
+    margin: 0;
+    top: 50%;
+    padding:5px;
+    line-height: 20px;
+    -webkit-box-flex: 0;
+    flex: 0 0 auto;
+    margin-right: 0;
+    width: 160px;
+    height: 160px;
+    background-position: 50% 50% ;
+    }
+    .svg-jquery{
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    }
+    .buttom-jquery{
+    position: relative;
+    }
+    .svgIcon-use{
+    position: absolute;
+    right: 40px;
+    top: -1px; 
+    } 
+    * {
+      box-sizing: border-box;
+    }
+    .section-jquery {
+      transition: transform .5s;
+      
+      
+    }
+    .section-jquery:hover {
+      -ms-transform: scale(1.08); /* IE 9 */
+      -webkit-transform: scale(1.08); /* Safari 3-8 */
+      transform: scale(1.08); 
+    }
+    /* END CARD fit */
